# fringe-vs-astar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
benches/: a_star_bench.rs  comparison_bench.rs  fringe_bench.rs  pathfinding.rs
benches/common/: mod.rs
benchmarks/: 4x4.map  6x6.map  dia10x10.map.scen
docs/: Viikkoraportti 1.md  Viikkoraportti 5.md  määrittely.md  testaus.md  toteutus.md
docs/viikkoraportit/: Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 6.md  Viikkoraportti 7.md
maps/: 3x3.map.scen  4x4.map.scen  5x5.map  AR0401SR.map.scen  corner.map  corner.map.scen  dia10x10.map.scen  dia30x30.map.scen  lak104d.map.scen  mts.map.scen
src/: algorithms.rs  cli.rs  context.rs  graph.rs  lib.rs  main.rs  map.rs  pathfinder.rs  printable.rs  problem.rs  structures.rs
src/algorithms/: astar.rs  fringe.rs  fringesearch.rs  heuristic.rs  solver.rs
src/algorithms/astar/: cache.rs  frontier.rs  weighted_cell.rs
src/algorithms/fringe/: cache.rs
src/algorithms/fringesearch/: action.rs  bucket.rs  buckets.rs  cache.rs  fringe.rs  indexes.rs
src/algorithms/fringesearch/fringe/: buckets.rs  indexes.rs
src/structures/: fringe.rs  frontier.rs  graph.rs  map.rs  weighted_cell.rs
tests/: pathfinding_tests.rs
tests/common/: mod.rs
