[package]
name = "fringe-vs-astar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
criterion = { version ="0.3", features =["html_reports"] }

[[bench]]
name = "fringe_bench"
harness = false

[[bench]]
name = "a_star_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bin]]
name = "fringe-vs-astar"
path = "src/main.rs"
bench = false

[lib]
bench = false
